--- a/frontend/src/pages/ItemSheet/ItemSheet.scss
+++ b/frontend/src/pages/ItemSheet/ItemSheet.scss
@@ -1,5 +1,9 @@
 @import "../../assets/styles/variables.scss";
 
+h1 {
+  @include text-invisible;
+}
+
 .item-sheet {
   display: flex;
   flex-direction: column;
